# FUSION_2024_Thormann_Landmarks

./: README.md
data/fusion_sequences/seq1_linear/: landmark_locations.json
data/fusion_sequences/seq2_curves/: landmark_locations.json
data/fusion_sequences/seq3_slalom/: landmark_locations.json
data/fusion_training/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  (+566 more)
data/fusion_validation/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  (+415 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
radar/: package.xml  setup.py
radar/launch/: launch_localization_pipeline.xml
radar/radar/config/: topics.py
radar/radar/implementation/: landmark_estimator.py  odometry_visualizer.py  pf_localizer.py
radar/radar/scripts/: create_joint_odom_vis_from_json.py
radar/radar/utilities/: data_preprocessor.py  detection_utils.py
radar_interfaces/: CMakeLists.txt
radar_interfaces/msg/: LandmarkEstimate.msg
(+76 files in other folders)
