<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>radar</name>
    <version>0.0.0</version>
    <description>Reads data from Infineon radar and publishes it on /radar node. Can read from /radar to process and
        plot the radar signal.
    </description>
    <maintainer email="kolja.thormann@cs.uni-goettingen.de">Kolja Thormann</maintainer>
    <license>TODO: License declaration</license>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_python</build_type>
        <depend>rclpy</depend>
        <depend>std_msgs</depend>
        <depend>nav_msgs</depend>
        <depend>geometry_msgs</depend>
        <depend>rader_interfaces</depend>
    </export>
</package>
